--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sanity/vision": "^3.32.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.24",
     "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "next-sanity": "^7.1.4",
